--- a/ui/package.json
+++ b/ui/package.json
@@ -10,18 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@llm-ui/code": "^0.13.3",
-    "@llm-ui/markdown": "^0.13.3",
-    "@llm-ui/react": "^0.13.3",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.1",
     "@types/uuid": "^10.0.0",
     "html-react-parser": "^5.1.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.26.2",
     "react-use-websocket": "^4.8.1",
-    "remark-gfm": "^4.0.0",
-    "shiki": "^1.16.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "vite-plugin-cross-origin-isolation": "^0.1.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
