--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,5 +9,6 @@ RUN pip install -r requirements.txt
 
 COPY server.py server.py
 COPY utils utils
+COPY config.json config.json
 
 ENTRYPOINT ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
