--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,5 +1,6 @@
 FROM node:20.10-slim
 
+WORKDIR /app
 
 COPY package.json package.json
 
@@ -8,5 +9,7 @@ RUN npm install
 COPY . .
 
 RUN npm run build
+
+COPY serve.json dist/serve.json
 
 ENTRYPOINT ["npx", "serve", "--listen", "80", "--single", "dist"]
