Add Markdown rendering, refactor server files

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install -r requirements.txt
 
 COPY server.py server.py
 COPY utils utils
+COPY components components
 COPY config.json config.json
 
 ENTRYPOINT ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
