--- a/ui/package.json
+++ b/ui/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
+    "react-scrollable-feed": "^2.0.2",
     "react-use-websocket": "^4.8.1",
     "uuid": "^10.0.0",
     "vite-plugin-cross-origin-isolation": "^0.1.6"
