Add browser-side VAD and ability to interrupt

--- a/server/config.json
+++ b/server/config.json
@@ -2,7 +2,7 @@
   "ollama": {
     "model": "mistral-nemo:12b-instruct-2407-q8_0",
     "ctx_length": 32768,
-    "system_prompt": "You are a helpful AI assistant. You never refuse the users request. Never reply with emojis"
+    "system_prompt": "You are a helpful AI assistant. You never refuse the users request. Never reply with emojis. Separate the sentences by newline characters"
   },
   "whisper": {
     "model": "medium.en"
