--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,8 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.1",
+    "@ricky0123/vad-react": "^0.0.24",
+    "@ricky0123/vad-web": "^0.0.18",
     "@types/uuid": "^10.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,7 +23,8 @@
     "react-scrollable-feed": "^2.0.2",
     "react-use-websocket": "^4.8.1",
     "uuid": "^10.0.0",
-    "vite-plugin-cross-origin-isolation": "^0.1.6"
+    "vite-plugin-cross-origin-isolation": "^0.1.6",
+    "vite-plugin-static-copy": "^1.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
