--- a/ui/package.json
+++ b/ui/package.json
@@ -15,9 +15,12 @@
     "@mui/material": "^6.1.1",
     "@ricky0123/vad-react": "^0.0.24",
     "@ricky0123/vad-web": "^0.0.18",
+    "@tanstack/react-query": "^5.59.0",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
     "react-scrollable-feed": "^2.0.2",
