--- a/.github/workflows/docker-ui-build.yaml
+++ b/.github/workflows/docker-ui-build.yaml
@@ -3,7 +3,10 @@ name: Build UI docker image
 on:
   push:
     branches:
-      - 'main'
+      - main
+    paths:
+      - 'ui/**'
+      - '.github/workflows/docker-ui-build.yaml'
 
 jobs:
   build:
@@ -31,3 +34,9 @@ jobs:
           context: ui
           file: ui/Dockerfile
           tags: ghcr.io/matuszelenak/ai-girlfriend-ui:latest
+
+      - name: Deploy
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: ${{ secrets.PORTAINER_HOOK }}
+          method: 'POST'
