--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,15 +1,19 @@
-FROM node:20.10-slim
+FROM node:20.10-slim AS build
 
 WORKDIR /app
 
-COPY package.json package.json
+COPY package*.json ./
 
 RUN npm install
-
 COPY . .
-
 RUN npm run build
 
-COPY serve.json dist/serve.json
 
-ENTRYPOINT ["npx", "serve", "--listen", "80", "--single", "dist"]
+FROM nginx:latest
+
+COPY --from=build /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
