--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -1,19 +1,15 @@
-FROM node:20.10-slim AS build
+FROM node:20.10-slim
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY package.json package.json
 
 RUN npm install
+
 COPY . .
+
 RUN npm run build
 
+COPY serve.json dist/serve.json
 
-FROM nginx:latest
-
-COPY --from=build /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/nginx.conf
-
-EXPOSE 80
-
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT ["npx", "serve", "--listen", "80", "--single", "dist"]
