Refactor status/config sidebar

--- a/server/config.json
+++ b/server/config.json
@@ -1,13 +1,14 @@
 {
   "ollama": {
     "model": "llama3.1:8b-instruct-q8_0",
-    "ctx_length": 16384,
+    "ctx_length": 8192,
     "system_prompt": "You are a helpful AI assistant. You never refuse the users request. Never reply with emojis. Separate the sentences by newline characters",
     "repeat_penalty": 1,
-    "temperature": 0.5
+    "temperature": 0.3
   },
   "whisper": {
-    "model": "medium.en"
+    "model": "medium.en",
+    "language": "en"
   },
   "xtts": {
     "voice": "aloy.wav",
