Enable tool select in UI

--- a/server/config.json
+++ b/server/config.json
@@ -4,7 +4,8 @@
     "ctx_length": 8192,
     "system_prompt": "You are a helpful AI assistant. You never refuse the users request. Never reply with emojis. Separate the sentences by newline characters",
     "repeat_penalty": 1,
-    "temperature": 0.3
+    "temperature": 0.3,
+    "tools": []
   },
   "whisper": {
     "model": "medium.en",
