--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.26.2",
     "react-scrollable-feed": "^2.0.2",
     "react-use-websocket": "^4.8.1",
+    "remark-gfm": "^4.0.0",
     "uuid": "^10.0.0",
     "vite-plugin-cross-origin-isolation": "^0.1.6",
     "vite-plugin-static-copy": "^1.0.6"
