Refactor audio player to fetch files, integrate with own realtime whisper

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -32,6 +32,7 @@ services:
       - "8000:8000"
     volumes:
       - ./server:/app
+      - ./tts_output:/tts_output
 
   ui:
     container_name: ai-girlfriend-ui
