Another big refactor of everything

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-WHISPER_API_URL=ws://10.0.0.1:9091
+WHISPER_API_URL=10.0.0.1:9091
 XTTS2_API_URL=http://10.0.0.1:7851
 OLLAMA_API_URL=http://10.0.0.1:11434
 POSTGRES_USER=
