--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,6 @@ services:
     image: nginx:latest
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ui/dist:/ui
     ports:
       - "80:80"
     depends_on:
@@ -27,18 +26,25 @@ services:
       - .env
     build:
       context: ./server
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
+    entrypoint: uvicorn server:app --host 0.0.0.0 --port 8000 --reload --timeout-graceful-shutdown 0
     ports:
       - "8000:8000"
+    develop:
+      watch:
+        - action: rebuild
+          path: server/requirements.txt
+        - action: sync
+          path: server
+          target: /app
     volumes:
-      - ./server:/app
       - ./tts_output:/tts_output
 
   assistant:
     container_name: ai-girlfriend-assistant
     build:
       context: ./assistant
-      dockerfile: dev.Dockerfile
+      dockerfile: Dockerfile
     ports:
       - "8001:8001"
     env_file:
@@ -48,14 +54,8 @@ services:
         - action: rebuild
           path: assistant/requirements.txt
         - action: sync
-          path: assistant/agents.py
-          target: /app/agents.py
-        - action: sync
-          path: assistant/server.py
-          target: /app/server.py
-        - action: sync
-          path: assistant/utils.py
-          target: /app/utils.py
+          path: assistant
+          target: /app
 
   ui:
     container_name: ai-girlfriend-ui
@@ -66,8 +66,16 @@ services:
       - server
     ports:
       - "5000:5000"
-    volumes:
-      - ./ui:/app
+    develop:
+      watch:
+        - action: rebuild
+          path: ./ui/package.json
+        - action: sync
+          path: ./ui
+          target: /app
+          ignore:
+            - node_modules/
+
 
 volumes:
   postgres-data:
