--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -15,5 +15,6 @@ COPY providers providers
 COPY config.json config.json
 COPY alembic.ini alembic.ini
 COPY endpoints endpoints
+COPY models models
 
 ENTRYPOINT ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
