--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.59.0",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
+    "onnxruntime-web": "^1.21.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
