Functional state checkpoint

--- a/server/config.json
+++ b/server/config.json
@@ -5,8 +5,8 @@
     "language": "en"
   },
   "tts": {
-    "provider": "kokoro",
-    "voice": "bf_emma"
+    "provider": "orpheus",
+    "voice": "leah"
   },
   "app": {
     "prevalidate_prompt": true,
