--- a/nginx.conf
+++ b/nginx.conf
@@ -33,6 +33,9 @@ http {
 
         location / {
             proxy_pass http://ui:5000;
+            proxy_set_header Cross-Origin-Opener-Policy same-origin;
+            proxy_set_header Cross-Origin-Embedder-Policy require-corp;
+            proxy_set_header Cross-Origin-Resource-Policy same-origin;
         }
     }
 }
