--- a/svelte-ui/package.json
+++ b/svelte-ui/package.json
@@ -22,7 +22,11 @@
 		"vite": "^6.2.6"
 	},
 	"dependencies": {
+		"@humanspeak/svelte-markdown": "^0.8.7",
+		"@tanstack/svelte-query": "^5.79.0",
+		"@tanstack/svelte-query-devtools": "^5.79.0",
 		"@types/audioworklet": "^0.0.75",
+		"axios": "^1.9.0",
 		"vite-plugin-cross-origin-isolation": "^0.1.6",
 		"vite-plugin-static-copy": "^3.0.0"
 	}
