Integrate chatterbox, chat functionality in svelte UI

--- a/server/config.json
+++ b/server/config.json
@@ -5,8 +5,7 @@
     "language": "en"
   },
   "tts": {
-    "provider": "orpheus",
-    "voice": "leah"
+    "provider": "chatterbox"
   },
   "app": {
     "prevalidate_prompt": true,
