--- a/svelte-ui/package.json
+++ b/svelte-ui/package.json
@@ -12,6 +12,8 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@skeletonlabs/skeleton": "^3.1.3",
+		"@skeletonlabs/skeleton-svelte": "^1.2.3",
 		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.16.0",
@@ -23,10 +25,12 @@
 	},
 	"dependencies": {
 		"@humanspeak/svelte-markdown": "^0.8.7",
+		"@tailwindcss/vite": "^4.1.8",
 		"@tanstack/svelte-query": "^5.79.0",
 		"@tanstack/svelte-query-devtools": "^5.79.0",
 		"@types/audioworklet": "^0.0.75",
 		"axios": "^1.9.0",
+		"tailwindcss": "^4.1.8",
 		"vite-plugin-cross-origin-isolation": "^0.1.6",
 		"vite-plugin-static-copy": "^3.0.0"
 	}
