Update requirements, refactor session config to be global across chats and loaded from file

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -18,12 +18,12 @@ services:
     ports:
       - "5432:5432"
     env_file:
-      - .env
+      - server/.env
 
   server:
     container_name: her-server
     env_file:
-      - .env
+      - server/.env
     build:
       context: ./server
       dockerfile: Dockerfile
