--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -7,14 +7,6 @@ WORKDIR /app
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
-COPY server.py server.py
-COPY utils utils
-COPY tasks tasks
-COPY db db
-COPY providers providers
-COPY config.json config.json
-COPY alembic.ini alembic.ini
-COPY endpoints endpoints
-COPY models models
+COPY . .
 
 ENTRYPOINT ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
