--- a/assistant/requirements.txt
+++ b/assistant/requirements.txt
@@ -1,8 +1,9 @@
-fastapi
-pydantic-ai
-logfire[fastapi]
-sse-starlette
-uvicorn
-openai
-tavily-python
-spotipy
+fastapi==0.115.12
+logfire==3.19.0
+openai==1.86.0
+pydantic-ai==0.2.18
+pydantic-settings==2.9.1
+spotipy==2.25.1
+sse-starlette==2.3.6
+tavily-python==0.7.6
+uvicorn==0.34.3
