--- a/docker-compose.prod.yaml
+++ b/docker-compose.prod.yaml
@@ -26,7 +26,7 @@ services:
     volumes:
       - postgres-data:/var/lib/postgresql/data
     env_file:
-      - .env
+      - server/.env
 
 volumes:
   postgres-data:
