--- a/server/config.template.json
+++ b/server/config.template.json
@@ -5,7 +5,8 @@
     "language": "en"
   },
   "tts": {
-    "provider": "chatterbox"
+    "provider": "chatterbox",
+    "voice": "nichalia_schwartz"
   },
   "app": {
     "prevalidate_prompt": true,
