--- a/assistant/Dockerfile
+++ b/assistant/Dockerfile
@@ -1,5 +1,10 @@
 FROM python:3.12-slim-bookworm
 
+ARG DEBIAN_FRONTEND=noninteractive
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 RUN apt update && apt install -y gcc libpq-dev ncat
 
 WORKDIR /app
