--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,15 @@
 FROM python:3.12-slim-bookworm
 
+ARG DEBIAN_FRONTEND=noninteractive
+
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 RUN apt update && apt install -y gcc libpq-dev ncat
 
 WORKDIR /app
 
+RUN pip install setuptools
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
